@@ -29,7 +29,7 @@
 #include "sbuild-chroot-file.h"
 #include "sbuild-chroot-lvm-snapshot.h"
 #include "sbuild-chroot-plain.h"
-#include "sbuild-config.h"
+#include "sbuild-chroot-config.h"
 #include "sbuild-error.h"
 #include "sbuild-environment.h"
 #include "sbuild-i18n.h"
