@@ -28,7 +28,7 @@ noinst_LTLIBRARIES = libtest.la
 
 noinst_PROGRAMS = 		\
 	sbuild-chroot		\
-	sbuild-config		\
+	sbuild-chroot-config	\
 	sbuild-environment	\
 	sbuild-keyfile		\
 	sbuild-lock		\
@@ -54,8 +54,8 @@ sbuild_chroot_SOURCES = 		\
 	test-sbuild-chroot.h
 sbuild_chroot_LDADD =  libtest.la
 
-sbuild_config_SOURCES = sbuild-config.cc
-sbuild_config_LDADD = libtest.la
+sbuild_chroot_config_SOURCES = sbuild-chroot-config.cc
+sbuild_chroot_config_LDADD = libtest.la
 
 sbuild_environment_SOURCES = sbuild-environment.cc
 sbuild_environment_LDADD = libtest.la
